
CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(prod-vs-class CXX)

SET(CMAKE_CXX_STANDARD 14)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
ADD_DEFINITIONS(-pedantic-errors)
ADD_DEFINITIONS(-Werror=all)
ADD_DEFINITIONS(-Werror=extra)
ADD_DEFINITIONS(-Werror=return-type)
ADD_DEFINITIONS(-fstack-protector)

ADD_SUBDIRECTORY(src)

